examples/invalid/unsed_var.reqlang
```%config
vars = ["base_url"]
```

```%request
GET / HTTP/1.1
```
